<resources>
    <string name="app_name">ChefBook</string>
    <string name="instructions">Choose a recipe to view more details</string>
    <string name="shopping_list">Shopping List</string>
    <string name="my_recipes">My Recipes</string>
    <string name="search_results">Search Results</string>
    <string name="add_recipe">Add to My Recipes</string>
    <string name="remove_recipe">Remove from My Recipes</string>
    <string name="add_to_list">Add to Shopping List</string>
    <string name="recipe_title">Recipe Title</string>
    <string name="instructions_title">Instructions</string>
    <string name="ingredients_title">Ingredients</string>
    <string name="expand">[ + ]</string>
    <string name="collapse">[ &#8211; ]</string>
    <string name="instructions_body">Instructions</string>
    <string name="close_menu">Close menu</string>
    <string name="prep_time">Total Prep Time:</string>
    <string name="minutes">minutes</string>
    <string name="servings">Servings:</string>
    <string name="search">Search</string>
    <string name="random">Random</string>
    <string name="loading">Fetching your recipe&#8230;</string>
    <string name="up">Up</string>
    <string name="search_hint">Search recipes</string>
    <string name="return_to_my">Return to my recipes</string>
    <string name="recipes_title">Recipes</string>
    <string name="clear_shopping">Empty List</string>
    <string name="clear_message">Are you sure you want to empty your shopping list?</string>
    <string name="find_store">Find a grocery store</string>
    <string name="title_activity_launch">LaunchActivity</string>
    <string name="get_started">Get Started</string>
    <string name="launch_search">Craving something specific?</string>
    <string name="list">List</string>
    <string name="launch_my">Revisit your favorites</string>
    <string name="launch_list">All in one place - clear it as you shop</string>
    <string name="launch_random">Feeling bold? Go for the unknown!</string>
    <string name="empty_list">Your shopping list is empty! \n\nAdd some recipes before you go to the store.</string>
    <string name="ad_unit_id">ca-app-pub-5551247818101576/7259317249</string>
    <string name="ad_test_id_tablet">4B36A9FBD18ADF42523E969BDDF50955</string>
    <string name="ad_test_id_phone">222D53C89DF31924ACA6B2C02D748779</string>
    <string name="try_today">Try a new recipe today!</string>
    <string name="bad_search">Your search did not return any results. Try something else!</string>
    <string name="empty_recipes">You have no saved recipes! Search for some, or surprise yourself with something random.</string>
    <string name="no_instructions">There are no instructions for this recipe!</string>
    <string name="access_location">ChefBook needs to access your location to find the nearest grocery stores.</string>
    <string name="no_map">You have no map app available</string>
    <string name="sure">I am sure</string>
    <string name="no">No</string>
    <string name="remove_list_ingredient">Remove ingredient from shopping list</string>
    <string name="remove_list_recipe">Remove recipe from shopping list</string>
    <string name="recipe_image">Image of recipe</string>
</resources>
