<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/list_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/medium_grey"
        app:contentInsetStartWithNavigation="0dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/list_action_up"
                android:layout_width="wrap_content"
                android:layout_height="?actionBarSize"
                android:src="@drawable/ic_arrow_back_black_24dp"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/up"
                android:background="?selectableItemBackgroundBorderless"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/shopping_list"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@color/main_yellow"/>
        </LinearLayout>

    </android.support.v7.widget.Toolbar>

    <FrameLayout
        android:id="@+id/empty_list_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/empty_list"
            android:textSize="36sp"
            android:padding="36dp"/>
    </FrameLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recipes_title"
        style="@style/SectionHeader"/>

    <ListView
        android:layout_margin="8dp"
        android:id="@+id/list_recipe_listview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:listSelector="@android:color/transparent"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ingredients_title"
        style="@style/SectionHeader"/>

    <ListView
        android:layout_margin="8dp"
        android:id="@+id/list_ingredient_listview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clear_shopping"
        android:onClick="finishShopping"/>

</LinearLayout>