<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/detail_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            android:fitsSystemWindows="true"
            app:expandedTitleMarginStart="16dp"
            app:expandedTitleMarginEnd="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_collapseMode="parallax">

                <ImageView
                    android:id="@+id/recipe_detail_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:layout_collapseMode="parallax"
                    android:fitsSystemWindows="true"
                    android:adjustViewBounds="true"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="72dp"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:id="@+id/scrim_top"
                android:layout_gravity="bottom"
                android:layout_marginBottom="48dp"
                android:background="@color/colorPrimary"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:id="@+id/scrim_bottom_"
                android:layout_gravity="bottom"
                android:background="@color/colorPrimary"/>

            <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:paddingLeft="48dp"
                android:id="@+id/detail_toolbar"
                app:layout_collapseMode="pin"
                app:layout_scrollFlags="scroll|enterAlways" />
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_add_recipe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_recipe" />

            <Button
                android:id="@+id/button_remove_recipe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/remove_recipe"
                android:visibility="gone"/>

            <Button
                android:id="@+id/button_add_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_to_list"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/collapse_expand_ingredients"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true">

                    <TextView
                        android:id="@+id/recipe_detail_ingredients_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:text="@string/ingredients_title"
                        style="@style/SectionHeader"
                        android:layout_margin="8dp"/>

                    <TextView
                        android:id="@+id/textview_plus_minus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/recipe_detail_ingredients_title"
                        android:text="@string/collapse"
                        style="@style/SectionHeader" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/recipe_detail_ingredients_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"/>

                <TextView
                    android:id="@+id/recipe_detail_instructions_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/instructions_title"
                    style="@style/SectionHeader"/>

                <TextView
                    android:id="@+id/recipe_detail_instructions_body"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/instructions_body"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>