<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/medium_grey"
    tools:context="com.example.android.chefbook.activities.LaunchActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
    <LinearLayout
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:padding="36dp">

        <ImageView
            android:id="@+id/app_logo"
            android:transitionName="logo"
            android:layout_marginTop="24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/chefbook"
            android:gravity="center_horizontal"
            android:keepScreenOn="true"
            android:contentDescription="@string/app_name"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/get_started"
            android:textColor="@color/main_yellow"
            android:textSize="24sp"
            android:layout_margin="16dp"/>

        <LinearLayout
            android:background="@drawable/rounded_rectangle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:clickable="true"
                android:onClick="onLaunchClickMyRecipes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:elevation="4dp"
                android:background="?android:selectableItemBackground">

                <ImageView
                    android:contentDescription="@string/my_recipes"
                    android:id="@+id/star_image"
                    android:transitionName="star_image"
                    android:src="@drawable/ic_star_black_24dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleX="1.5"
                    android:scaleY="1.5"
                    android:layout_gravity="center"
                    android:padding="24dp"/>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@color/dark_grey"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:paddingBottom="8dp">

                    <TextView
                        android:id="@+id/star_text"
                        android:transitionName="star_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/my_recipes"
                        android:layout_gravity="center"
                        android:textSize="24sp"
                        android:layout_marginTop="8dp"
                        android:gravity="center"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/launch_my"
                        android:layout_gravity="center"
                        android:textSize="18sp"
                        android:gravity="center"/>
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/dark_grey"/>

            <LinearLayout
                android:clickable="true"
                android:onClick="onLaunchClickSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:elevation="4dp"
                android:background="?android:selectableItemBackground">

                <ImageView
                    android:contentDescription="@string/search"
                    android:id="@+id/search_image"
                    android:transitionName="search_image"
                    android:src="@drawable/ic_search_black_24dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleX="1.5"
                    android:scaleY="1.5"
                    android:layout_gravity="center"
                    android:padding="24dp"/>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@color/dark_grey"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:paddingBottom="8dp">

                    <TextView
                        android:id="@+id/search_text"
                        android:transitionName="search_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/search"
                        android:layout_gravity="center"
                        android:textSize="24sp"
                        android:layout_marginTop="8dp"
                        android:gravity="center"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/launch_search"
                        android:layout_gravity="center"
                        android:textSize="18sp"
                        android:gravity="center"/>
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/dark_grey"/>

            <LinearLayout
                android:clickable="true"
                android:onClick="onLaunchClickRandom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:elevation="4dp"
                android:background="?android:selectableItemBackground">

                <ImageView
                    android:contentDescription="@string/random"
                    android:id="@+id/random_image"
                    android:transitionName="random_image"
                    android:src="@drawable/ic_shuffle_black_24dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleX="1.5"
                    android:scaleY="1.5"
                    android:layout_gravity="center"
                    android:padding="24dp"/>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@color/dark_grey"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:paddingBottom="8dp">

                    <TextView
                        android:id="@+id/random_text"
                        android:transitionName="random_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/random"
                        android:layout_gravity="center"
                        android:textSize="24sp"
                        android:layout_marginTop="8dp"
                        android:gravity="center"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/launch_random"
                        android:layout_gravity="center"
                        android:textSize="18sp"
                        android:gravity="center"/>
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/dark_grey"/>

            <LinearLayout
                android:clickable="true"
                android:onClick="onLaunchClickList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:elevation="4dp"
                android:background="?android:selectableItemBackground">

                <ImageView
                    android:contentDescription="@string/shopping_list"
                    android:id="@+id/list_image"
                    android:transitionName="list_image"
                    android:src="@drawable/ic_filter_none_black_24dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleX="1.5"
                    android:scaleY="1.5"
                    android:layout_gravity="center"
                    android:padding="24dp"/>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@color/dark_grey"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingRight="8dp"
                    android:paddingLeft="8dp"
                    android:paddingBottom="8dp">

                    <TextView
                        android:id="@+id/list_text"
                        android:transitionName="list_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/list"
                        android:layout_gravity="center"
                        android:textSize="24sp"
                        android:layout_marginTop="8dp"
                        android:gravity="center"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/launch_list"
                        android:layout_gravity="center"
                        android:textSize="18sp"
                        android:gravity="center"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="?metaButtonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="horizontal"
            tools:ignore="UselessParent">
        </LinearLayout>
    </FrameLayout>
</FrameLayout>
