<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/main_appbar"
        android:elevation="4dp"
        android:fitsSystemWindows="true">

        <android.support.v7.widget.Toolbar
            app:layout_scrollFlags="scroll"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:id="@+id/main_toolbar"
            app:contentInsetStart="0dp"
            android:fitsSystemWindows="true">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:gravity="center"
                android:textSize="24sp"/>
        </android.support.v7.widget.Toolbar>

        <View
            app:layout_scrollFlags="scroll"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorAccent"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"/>

        <LinearLayout
            android:baselineAligned="false"
            app:layout_scrollFlags="scroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:onClick="">

                <TextView
                    android:paddingTop="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search"
                    android:layout_gravity="center"
                    android:textSize="16sp"/>
            </FrameLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"/>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:onClick="getRandomRecipe">

                <TextView
                    android:paddingTop="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/random"
                    android:layout_gravity="center"
                    android:textSize="16sp"/>
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="54dp"
                android:src="@drawable/ic_search_black_24dp"
                android:layout_gravity="center"
                android:contentDescription="@string/search"
                android:padding="8dp"
                android:clickable="true"
                android:onClick=""/>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/colorAccent"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"/>

            <ImageView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="54dp"
                android:src="@drawable/ic_shuffle_black_24dp"
                android:layout_gravity="center"
                android:contentDescription="@string/random"
                android:padding="8dp"
                android:clickable="true"
                android:onClick="getRandomRecipe"/>
        </LinearLayout>

    </android.support.design.widget.AppBarLayout>

    <GridView
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:id="@+id/gridview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:numColumns="auto_fit"
        android:stretchMode="columnWidth"
        android:padding="8dp"
        android:horizontalSpacing="8dp"
        android:verticalSpacing="8dp"/>

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_filter_none_black_24dp"
        android:id="@+id/fab_go_list"
        android:layout_gravity="bottom|end"
        android:layout_margin="8dp"/>
</android.support.design.widget.CoordinatorLayout>
